6.3 added v1.1 kodilla-testing module